@@ -107,5 +107,17 @@ class BatchOneways
         }
         batch.ice_ping();
         batch2.ice_ping();
+
+        Ice.Identity identity = new Ice.Identity();
+        identity.name = "invalid";
+        Ice.ObjectPrx batch3 = batch.ice_identity(identity);
+        batch3.ice_ping();
+        batch3.ice_flushBatchRequests();
+        
+        // Make sure that a bogus batch request doesn't cause troubles to other ones.
+        batch3.ice_ping();
+        batch.ice_ping();
+        batch.ice_flushBatchRequests();
+        batch.ice_ping();
     }
 }
